# python-plasma-cplasma

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cplasma.cpp  cplasma_ext.cpp  demo.py  horrible_macros.hpp  setup.py
bld/: find-gspeak-sdk  g-speak-sdk.cmake
cplasma/: __init__.py  _pyplasma_api.py  compat.py  const.py  exceptions.py  interrupt.py  metabolizer.py  obtypes.py  yamlio.py
docker/: Dockerfile  install_boost.sh
example/: exceptions.py  peek.py  sluice_heart_watcher.py  tiled.py
test/: everything.py  hash_test.py  pool_server_test.py  test_readable_slaw.py  unicode_test.py  yamlio_test.py
test/yamlio/: remove_topo.protein
